# cerith

./: Cargo.toml  Makefile  README.md
.github/workflows/: test.yml
config/: default.toml
src/: bot.rs  cerith.rs  main.rs
