[package]
name = "cerith"
version = "0.1.1"
authors = ["Florian Anderiasch <fa@art-core.org>"]
edition = "2018"

[lib]
name = "cerith"
path = "src/cerith.rs"

[[bin]]
name = "cerith"
path = "src/bot.rs"

[dependencies]
getopts = "0.2.21"
libc = "0.2.147"
rand = "0.8"
regex = "1.9.5"
time = { version = "0.3", features = ["local-offset", "formatting", "macros"] }
toml = "0.7.6"
