[package]
name = "cerith"
version = "0.1.2"
authors = ["Florian Anderiasch <fa@art-core.org>"]
edition = "2018"

[lib]
name = "cerith"
path = "src/cerith.rs"

[[bin]]
name = "cerith"
path = "src/bot.rs"

[dependencies]
getopts = "0.2.21"
libc = "0.2.162"
rand = "0.9.0"
regex = "1.11.1"
time = { version = "0.3.36", features = ["local-offset", "formatting", "macros"] }
toml = "0.8.19"
